// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbContainer renders correctly with project parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  font-size: 13px;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

<a
    class="constant-classname emotion-0"
    href="https://www.mongodb.com/docs/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-1"
    >
      Docs Home
    </span>
  </a>
  .emotion-0 {
  cursor: default;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

<span
    class="emotion-0 emotion-1"
  >
     → 
  </span>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  font-size: 13px;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

<a
    class="constant-classname emotion-0"
    href="https://www.mongodb.com/docs/view-analyze"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-1"
    >
      View & Analyze
    </span>
  </a>
  .emotion-0 {
  cursor: default;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

<span
    class="emotion-0 emotion-1"
  >
     → 
  </span>
  .emotion-0 {
  font-size: 13px;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #1C2D38;
}

<a
    class="emotion-0"
    href="/documents/view/"
  >
    MongoDB Compass
  </a>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly without project parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  font-size: 13px;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

<a
    class="constant-classname emotion-0"
    href="https://www.mongodb.com/docs/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-1"
    >
      Docs Home
    </span>
  </a>
  .emotion-0 {
  cursor: default;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

<span
    class="emotion-0 emotion-1"
  >
     → 
  </span>
  .emotion-0 {
  font-size: 13px;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #1C2D38;
}

<a
    class="emotion-0"
    href="/view-analyze/"
  >
    View & Analyze Data
  </a>
</DocumentFragment>
`;
